# verifiers

./: .gitignore  AGENTS.md  README.md  data.py  pyproject.toml
configs/: endpoints.py
environments/arc_agi_3/: README.md  arc_agi_3.py
environments/math_group/: math_group.py
environments/math_python/: pyproject.toml
environments/wiki_search/: README.md  pyproject.toml  wiki_search.py
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1-mini/e095b368/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1-nano/50fa4920/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-4.1/f6d9bd6b/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-5-mini/78fe3ac3/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-5-nano/a880a526/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--gpt-5/73850758/: metadata.json  results.jsonl
environments/wiki_search/outputs/evals/wiki-search--qwen--qwen3-30b-a3b-instruct-2507/1a83e72d/: metadata.json  results.jsonl
notes/: RELEASE_v0.1.5.md  RELEASE_v0.1.5.post0.md
verifiers/: __init__.py
verifiers/envs/: environment.py  multiturn_env.py  sandbox_env.py  textarena_env.py
verifiers/parsers/: parser.py
verifiers/rubrics/: judge_rubric.py
verifiers/trainers/: grpo_config.py
