[project]
name = "wiki-search"
description = "Agentic RAG over Wikipedia pages for trivia Q&A"
tags = ["wikipedia", "multi-turn", "agentic-search", "rag", "train", "eval", "llm-judge"]
requires-python = ">=3.11"
version = "0.1.3"
dependencies = [
    "verifiers>=0.1.5.post0",
    "chromadb",
    "datasets",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["wiki_search.py"]
